--- a/app/templates/catalog/index.hbs
+++ b/app/templates/catalog/index.hbs
@@ -125,73 +125,73 @@
 	        <div class="catalog-list">
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
@@ -213,25 +213,25 @@
 	        <div class="catalog-list">
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
@@ -253,25 +253,25 @@
 	        <div class="catalog-list">
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
@@ -293,25 +293,25 @@
 	        <div class="catalog-list">
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
@@ -333,25 +333,25 @@
 	        <div class="catalog-list">
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
@@ -373,25 +373,25 @@
 	        <div class="catalog-list">
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
@@ -413,25 +413,25 @@
 	        <div class="catalog-list">
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
 	        	{{#link-to "catalog.detail"}}
 	        	<div class="item">
-	        		<img src="assets/images/canister.png">
+	        		<img src="/assets/images/canister.png">
 	        		<span class="title">Merafoam® <b>CL</b></span>
 	        	</div>
 	        	{{/link-to}}
