--- a/app/templates/components/scroll-about.hbs
+++ b/app/templates/components/scroll-about.hbs
@@ -61,7 +61,7 @@
       </div>
     </div>
   </article>
-  <div {{bind-attr class=":factory-back backIsHidden:hidden-back"}}></div>
+  <div class="factory-back {{backHidden}}"></div>
   <article class="production">
     <div class="wrapper">
       <div class="container">
