--- a/app/templates/industries.hbs
+++ b/app/templates/industries.hbs
@@ -1,5 +1,192 @@
-<div {{bind-attr class=":industries currentIndustry"}}>
-	<div class="top-hero">
-		<div class="title"></div>
-	</div>
+<div class="industries">
+	<article class="industries-hero">
+		<div class="industries-hero-image {{currentIndustry}}">
+			<div class="title">{{currentIndustryTitle}}</div>
+		</div>
+	</article>
+	<article class="get-catalog hero">
+	  <div class="container-white">
+	    <div class="container container-hero">
+	      <div class="heading heading-top"></div>
+	      <div class="row">
+	        <div class="col-md-4">
+	          <div class="subarticle">
+	            <div class="title">Скачать каталог для птицефабрик</div>
+	            <div class="body">Программа гигиены для птицефабрик и предприятий птицеперерабатывающей промышленности. Еще текст для того, чтобы стоочково скачать этот несчастный каталог. </div>
+	            <div class="button button-red">Скачать каталог</div><!--div class="button button-transparent button-link">Перейти в медиа-центр</div-->
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</article>
 </div>
+<article>
+  <div class="container-fluid catalog-heading heading-foam">
+  	
+  </div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article><article>
+  <div class="container-fluid catalog-heading heading-cip"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list">
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
+<article>
+  <div class="container-fluid catalog-heading heading-additive"></div>
+  <div class="container-fluid container-grey">
+		<div class="container">
+      <div class="heading heading-top">
+      	<span class="title title-dark">внешняя мойка</span>
+      </div>
+	    <div class="row">
+	      <div class="col-md-12">
+	        <div class="catalog-list industry-catalog-list">
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+	        	{{#link-to "catalog.detail"}}
+	        	<div class="item">
+	        		<img src="/assets/images/canister.png">
+	        		<span class="title">Merafoam® <b>CL</b></span>
+	        	</div>
+	        	{{/link-to}}
+		      </div>
+	      </div>
+	    </div>
+	  </div>
+  </div>
+</article>
